[project]
name = "cyeva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pint>=0.24.3",
    "scipy>=1.14.1",
]

[tool.uv]
dev-dependencies = [
    "furo>=2024.8.6",
    "pytest>=8.3.3",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.1",
    "ruff>=0.7.1",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-memray>=1.7.0",
]
