[project]
name = "cyeva"
description = "A package to evaluate weather forecast correction"
readme = "README.md"
requires-python = ">=3.10, <3.13" # Python 3.13 is not supported yet. See https://github.com/hgrecco/pint/issues/2065
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pint==0.24.3",  # lock pint version to avoid breaking changes
    "scipy>=1.14.1",
]
maintainers = [
    { name = "caiyunapp", email = "oss@caiyunapp.com" },
    { name = "ringsaturn", email = "ringsaturn.me@gmail.com" },
]
auhtors = [
    { name = "caiyunapp", email = "oss@caiyunapp.com" },
    { name = "Clarmy", email = "clarmyleewt@gmail.com" },
    { name = "ringsaturn", email = "ringsaturn.me@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Framework :: Sphinx",
]
keywords = ["atmospheric-science", "mathmatics"]
dynamic = ["version"]

[project.urls]
Documentation = "https://caiyunapp.github.io/cyeva"
Issues = "https://github.com/caiyunapp/cyeva/issues"
"Source Code" = "https://github.com/caiyunapp/cyeva"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-memray>=1.7.0; sys_platform != 'win32'",
    "pytest-codspeed>=2.2.1",
]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cyeva/__init__.py"
